# rebake

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/rebake/: check.py  cli.py  config.py  update.py
src/rebake/utils/: git.py  template.py  variables.py
tests/: test_check.py  test_config.py  test_update.py  test_variables.py
tests/e2e/: conftest.py  test_check_e2e.py  test_update_e2e.py
tests/e2e/fixtures/simple_template/: cookiecutter.json
tests/e2e/fixtures/simple_template/{{cookiecutter.project_name}}/: CONTRIBUTING.md
