[project]
name = "rebake"
description = "A spiritual successor to cruft for managing cookiecutter projects"
readme = "README.md"
authors = [
    { name = "Ryo Kitagawa", email = "kitadrum50@gmail.com" }
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "cookiecutter>=2.6.0",
    "typer>=0.15.1",
    "gitpython>=3.1.44",
    "rich>=13.9.4",
]

[project.scripts]
rebake = "rebake.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "pyrefly>=0.17.0",
]

[tool.pytest.ini_options]
markers = ["e2e: end-to-end tests using real git and cookiecutter"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
enable = true

[tool.hatch.build.targets.wheel]
packages = ["src/rebake"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
